[workspace]
members = [
  "common",
  "client",
  "server",
]
default-members = ["client"]

[workspace.dependencies]
bincode = "1.3.3"
clap = { version = "4.0.10", features = ["derive"] }
nalgebra = { version = "0.31.1", features = ["serde-serialize"] }
serde = { version = "1.0.145", features = ["derive"] }
