[workspace]
members = [
  "common",
  "client",
  "server",
]
default-members = ["client"]

[workspace.dependencies]
bincode = "1.3.3"
clap = { version = "4.0.18", features = ["derive"] }
nalgebra = { version = "0.31.3", features = ["serde-serialize"] }
serde = { version = "1.0.147", features = ["derive"] }
